--- a/lab03-test/lab03-test.cbp
+++ b/lab03-test/lab03-test.cbp
@@ -31,6 +31,15 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../project/histogramm.cpp" />
+		<Unit filename="../project/histogramm.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="../project/svg.cpp" />
+		<Unit filename="../project/svg.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="test.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
