--- a/project/project.cbp
+++ b/project/project.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="histogramm.cpp" />
+		<Unit filename="histogramm.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
