--- a/project/project.cbp
+++ b/project/project.cbp
@@ -33,8 +33,14 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="histogramm.cpp" />
-		<Unit filename="histogramm.h" />
+		<Unit filename="histogramm.h">
+			<Option target="Release" />
+		</Unit>
 		<Unit filename="main.cpp" />
+		<Unit filename="svg.cpp" />
+		<Unit filename="svg.h">
+			<Option target="Release" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
